--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,10 @@
         "newlinesBetween": "always", 
         "groups": [
           "/^react/",
+          "/^next/",
+          "/^@/",
+          "/formik/",
+          "/yup/",
           "module",
           //"/^@shared/",//
           ["parent", "sibling", "index"]
